--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -9,7 +9,7 @@ env:
 
 builds:
   - id: linux-build
-    dir: ./cmd/syft
+    dir: ./cmd/gosbom
     binary: syft
     goos:
       - linux
@@ -30,7 +30,7 @@ builds:
       -X github.com/nextlinux/gosbom/internal/version.gitDescription={{.Summary}}
 
   - id: darwin-build
-    dir: ./cmd/syft
+    dir: ./cmd/gosbom
     binary: syft
     goos:
       - darwin
@@ -46,7 +46,7 @@ builds:
             - QUILL_LOG_FILE=/tmp/quill-{{ .Target }}.log
 
   - id: windows-build
-    dir: ./cmd/syft
+    dir: ./cmd/gosbom
     binary: syft
     goos:
       - windows
