--- a/Dockerfile.debug
+++ b/Dockerfile.debug
@@ -3,7 +3,7 @@ FROM gcr.io/distroless/static-debian11:debug
 # create the /tmp dir, which is needed for image content cache
 WORKDIR /tmp
 
-COPY syft /
+COPY gosbom /
 
 ARG BUILD_DATE
 ARG BUILD_VERSION
@@ -22,4 +22,4 @@ LABEL io.artifacthub.package.readme-url="https://raw.githubusercontent.com/nextl
 LABEL io.artifacthub.package.logo-url="https://user-images.githubusercontent.com/5199289/136844524-1527b09f-c5cb-4aa9-be54-5aa92a6086c1.png"
 LABEL io.artifacthub.package.license="Apache-2.0"
 
-ENTRYPOINT ["/syft"]
+ENTRYPOINT ["/gosbom"]
